[gd_scene load_steps=27 format=3 uid="uid://bd3dj73fu4rt6"]

[ext_resource type="Script" path="res://addons/PackedUi/Code/ui.gd" id="1_j1lf8"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/main_menu.gd" id="2_dhl62"]
[ext_resource type="Theme" uid="uid://cpqt1hqsijy37" path="res://addons/PackedUi/default_theme.tres" id="3_ohvov"]
[ext_resource type="PackedScene" uid="uid://n42xjoda2lxc" path="res://Scenes/game_timer.tscn" id="4_d2ias"]
[ext_resource type="Resource" uid="uid://b8vibxevek4jd" path="res://Data/SFX/attack_hit.tres" id="4_pajaf"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/options_menu.gd" id="4_wx7w4"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/credits.gd" id="5_6nx8t"]
[ext_resource type="Texture2D" uid="uid://8juqcok8b270" path="res://Textures/scratch.png" id="6_84jd6"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/credits_section_data.gd" id="6_86k27"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/player_ui.gd" id="6_im37q"]
[ext_resource type="Shader" path="res://Data/shaker.gdshader" id="6_j4lb2"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/pause_menu.gd" id="7_r3cjq"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/result_screen.gd" id="8_p1pvi"]
[ext_resource type="Script" path="res://Code/UI/how_to_play.gd" id="9_alkdw"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/wrappers/toggle_ui_button.gd" id="9_xcvtp"]
[ext_resource type="Script" path="res://addons/PackedUi/Code/popups.gd" id="9_y8v47"]
[ext_resource type="Texture2D" uid="uid://dwnkr2ov4qmle" path="res://Textures/cat.png" id="10_thids"]
[ext_resource type="Texture2D" uid="uid://b0e10cbyi0d3v" path="res://Textures/hands.png" id="11_6a7wp"]
[ext_resource type="Texture2D" uid="uid://b7kef1xa207ho" path="res://icon.svg" id="13_vydkj"]
[ext_resource type="Texture2D" uid="uid://4fmfjwd7xr7l" path="res://addons/PackedUi/popup_icon_warning.png" id="14_8eegs"]
[ext_resource type="Resource" uid="uid://bomfekyi5sese" path="res://Data/Credits/everything_else.tres" id="15_aiuyh"]
[ext_resource type="Script" path="res://Code/UI/final_time_label.gd" id="15_c8w5w"]
[ext_resource type="Resource" uid="uid://dusn4huximxj3" path="res://Data/Credits/audio.tres" id="16_rg3ha"]
[ext_resource type="Resource" uid="uid://bl6yhrvc062le" path="res://Data/Music/fail_music.tres" id="16_vavc4"]
[ext_resource type="Resource" uid="uid://mkbsbuu1exqj" path="res://Data/SFX/fail_sfx.tres" id="16_wqgfk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xbhe"]
shader = ExtResource("6_j4lb2")
shader_parameter/ShakeStrength = 0.0
shader_parameter/FactorA = Vector2(100, 100)
shader_parameter/FactorB = Vector2(1, 1)
shader_parameter/magnitude = Vector2(0.01, 0.01)

[node name="Ui" type="CanvasLayer" groups=["symbol24_plugin"]]
process_mode = 3
script = ExtResource("1_j1lf8")
default_theme = ExtResource("3_ohvov")

[node name="PlayerUI" type="Control" parent="." groups=["PlayerUI", "symbol24_plugin"]]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
script = ExtResource("6_im37q")
hit_sfx = ExtResource("4_pajaf")
id = "player_ui"

[node name="game_timer" parent="PlayerUI" instance=ExtResource("4_d2ias")]
layout_mode = 0
offset_left = 23.0
offset_top = 343.0
offset_right = 96.0
offset_bottom = 366.0

[node name="atk_color" type="ColorRect" parent="PlayerUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.442501, 7.58059e-07, 1.44392e-07, 0.619608)

[node name="attack_sprite" type="Sprite2D" parent="PlayerUI"]
unique_name_in_owner = true
visible = false
position = Vector2(386, 272)
texture = ExtResource("6_84jd6")

[node name="shake_rect" type="ColorRect" parent="PlayerUI"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_0xbhe")
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MainMenu" type="Control" parent="." node_paths=PackedStringArray("background") groups=["MainMenu", "symbol24_plugin"]]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_dhl62")
game_title = "GameTitle"
menu_options = Array[String](["Play", "How To Play", "Settings", "Credits"])
background_color = Color(0.242052, 0.18342, 0.265668, 1)
background = NodePath("background")
id = "main_menu"

[node name="background" type="ColorRect" parent="MainMenu"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.242052, 0.18342, 0.265668, 1)

[node name="vbox1" type="VBoxContainer" parent="MainMenu"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="MainMenu/vbox1"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="game_title_label" type="RichTextLabel" parent="MainMenu/vbox1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ohvov")
bbcode_enabled = true
text = "main_menu_title"
scroll_active = false

[node name="buttons_hbox" type="HBoxContainer" parent="MainMenu/vbox1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="hbox_seperator_01" type="Control" parent="MainMenu/vbox1/buttons_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="menu_button_vbox" type="VBoxContainer" parent="MainMenu/vbox1/buttons_hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 45

[node name="hbox_seperator_02" type="Control" parent="MainMenu/vbox1/buttons_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HowToPlay" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_alkdw")
id = "how to play"

[node name="Sprite2D" type="Sprite2D" parent="HowToPlay"]
texture = ExtResource("10_thids")
centered = false

[node name="ColorRect" type="ColorRect" parent="HowToPlay"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.517647)

[node name="vbox" type="VBoxContainer" parent="HowToPlay"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="HowToPlay/vbox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="title" type="RichTextLabel" parent="HowToPlay/vbox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_ohvov")
theme_type_variation = &"MenuTitle"
bbcode_enabled = true
text = "how_to_play"

[node name="spacer2" type="Control" parent="HowToPlay/vbox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="hbox" type="HBoxContainer" parent="HowToPlay/vbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="HowToPlay/vbox/hbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPlay/vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="part_1_rich" type="RichTextLabel" parent="HowToPlay/vbox/hbox/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"HTBText"
bbcode_enabled = true
text = "how_to_play_text"
scroll_active = false

[node name="Control" type="Control" parent="HowToPlay/vbox/hbox/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="part_2_rich" type="RichTextLabel" parent="HowToPlay/vbox/hbox/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("3_ohvov")
theme_type_variation = &"HTBText"
bbcode_enabled = true
text = "how_to_play_text_2"
scroll_active = false

[node name="Control2" type="Control" parent="HowToPlay/vbox/hbox/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="part_3_rich" type="RichTextLabel" parent="HowToPlay/vbox/hbox/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("3_ohvov")
theme_type_variation = &"HTBText"
bbcode_enabled = true
text = "how_to_play_text_3"
scroll_active = false

[node name="spacer2" type="Control" parent="HowToPlay/vbox/hbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="htp_return_btn" type="Button" parent="HowToPlay"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 1011.0
offset_top = 628.0
offset_right = 1211.0
offset_bottom = 669.0
theme = ExtResource("3_ohvov")
text = "Back"

[node name="hand1" type="Sprite2D" parent="HowToPlay"]
position = Vector2(116, 575)
texture = ExtResource("11_6a7wp")
vframes = 2

[node name="hand2" type="Sprite2D" parent="HowToPlay"]
position = Vector2(115, 430)
texture = ExtResource("11_6a7wp")
vframes = 2
frame = 1

[node name="OptionsMenu" type="Control" parent="." node_paths=PackedStringArray("background") groups=["OptionsMenu", "symbol24_plugin"]]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("4_wx7w4")
menu_name = "settings_menu"
confirm_on_exit = true
background_color = Color(0.390689, 0.491481, 0.64164, 1)
background = NodePath("options_background")
id = "settings"

[node name="options_background" type="ColorRect" parent="OptionsMenu"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.392157, 0.490196, 0.643137, 1)

[node name="vbox" type="VBoxContainer" parent="OptionsMenu"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="OptionsMenu/vbox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="options_page_title" type="RichTextLabel" parent="OptionsMenu/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_ohvov")
theme_type_variation = &"MenuTitle"
bbcode_enabled = true
text = "[center]title[/center]"

[node name="hbox" type="HBoxContainer" parent="OptionsMenu/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="spacer" type="Control" parent="OptionsMenu/vbox/hbox"]
custom_minimum_size = Vector2(270, 30)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="OptionsMenu/vbox/hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tab_alignment = 1
current_tab = 0

[node name="basic_settings" type="VBoxContainer" parent="OptionsMenu/vbox/hbox/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="spacer" type="Control" parent="OptionsMenu/vbox/hbox/TabContainer/basic_settings"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="settings_scrollcontainer" type="ScrollContainer" parent="OptionsMenu/vbox/hbox/TabContainer/basic_settings"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="basics_vbox" type="VBoxContainer" parent="OptionsMenu/vbox/hbox/TabContainer/basic_settings/settings_scrollcontainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="spacer2" type="Control" parent="OptionsMenu/vbox/hbox/TabContainer/basic_settings"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="spacer3" type="Control" parent="OptionsMenu/vbox/hbox"]
custom_minimum_size = Vector2(270, 30)
layout_mode = 2

[node name="spacer2" type="Control" parent="OptionsMenu/vbox"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2

[node name="option_back_btn" type="Button" parent="OptionsMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 1032.0
offset_top = 637.0
offset_right = 1232.0
offset_bottom = 683.0
theme = ExtResource("3_ohvov")
text = "Back"

[node name="Credits" type="Control" parent="." node_paths=PackedStringArray("background") groups=["Credits", "symbol24_plugin"]]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("5_6nx8t")
credit_sections = Array[ExtResource("6_86k27")]([ExtResource("15_aiuyh"), ExtResource("16_rg3ha")])
background_color = Color(0.131654, 0.250022, 0.218582, 1)
background = NodePath("background")
id = "credits"

[node name="background" type="ColorRect" parent="Credits"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.133333, 0.25098, 0.219608, 1)

[node name="credits_scroll" type="ScrollContainer" parent="Credits"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_ohvov")
horizontal_scroll_mode = 0

[node name="credits_vbox" type="VBoxContainer" parent="Credits/credits_scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="Credits/credits_scroll/credits_vbox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="game_name_in_credits" type="RichTextLabel" parent="Credits/credits_scroll/credits_vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_ohvov")
bbcode_enabled = true
text = "main_menu_title"

[node name="spacer2" type="Control" parent="Credits/credits_scroll/credits_vbox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="back_btn" type="Button" parent="Credits"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 1002.0
offset_top = 624.0
offset_right = 1202.0
offset_bottom = 670.0
theme = ExtResource("3_ohvov")
text = "Back"

[node name="PauseMenu" type="Control" parent="." node_paths=PackedStringArray("background") groups=["PauseMenu", "symbol24_plugin"]]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_r3cjq")
page_title = "Paused"
background_color = Color(0.054902, 0.054902, 0.054902, 0.858824)
background = NodePath("background")
id = "pause_menu"

[node name="background" type="ColorRect" parent="PauseMenu"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1, 0.998564)
color = Color(0.0627451, 0.0627451, 0.0627451, 0.682353)

[node name="vbox" type="VBoxContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="spacer" type="Control" parent="PauseMenu/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="pause_page_title" type="RichTextLabel" parent="PauseMenu/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_ohvov")
theme_type_variation = &"MenuTitle"
bbcode_enabled = true
text = "[center]title goes here[/center]"

[node name="pause_back_btn" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 1002.0
offset_top = 624.0
offset_right = 1202.0
offset_bottom = 670.0
theme = ExtResource("3_ohvov")
text = "Return"

[node name="settings_btn" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 768.0
offset_top = 624.0
offset_right = 968.0
offset_bottom = 670.0
theme = ExtResource("3_ohvov")
text = "Settings"
script = ExtResource("9_xcvtp")
target_ui_id = "settings"

[node name="main_menu_btn" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 541.0
offset_top = 624.0
offset_right = 741.0
offset_bottom = 670.0
theme = ExtResource("3_ohvov")
text = "Main Menu"

[node name="ResultScreen" type="Control" parent="." groups=["ResultScreen", "symbol24_plugin"]]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_p1pvi")
failure_jingle = ExtResource("16_wqgfk")
result_screen_music = ExtResource("16_vavc4")
id = "result_screen"

[node name="backgorund" type="ColorRect" parent="ResultScreen"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.158472, 0.158472, 0.158472, 1)

[node name="result" type="Label" parent="ResultScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("3_ohvov")
theme_type_variation = &"ResultTitle"
text = "result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="return_btn" type="Button" parent="ResultScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 907.0
offset_top = 571.0
offset_right = 1107.0
offset_bottom = 617.0
theme = ExtResource("3_ohvov")
text = "Main Menu"

[node name="time_hbox" type="HBoxContainer" parent="ResultScreen"]
custom_minimum_size = Vector2(1280, 100)
layout_mode = 0
offset_top = 238.0
offset_right = 1280.0
offset_bottom = 338.0

[node name="Label" type="Label" parent="ResultScreen/time_hbox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"FinalTimerLabel"
text = "final_time"
horizontal_alignment = 2

[node name="spacer" type="Control" parent="ResultScreen/time_hbox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="final_time_label" type="Label" parent="ResultScreen/time_hbox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"FinalTimerLabel"
text = "00:00.000"
script = ExtResource("15_c8w5w")

[node name="Popups" type="Control" parent="." groups=["symbol24_plugin"]]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_right = 1283.0
offset_bottom = 720.0
script = ExtResource("9_y8v47")

[node name="small_popup" type="PanelContainer" parent="Popups"]
unique_name_in_owner = true
visible = false
clip_contents = true
custom_minimum_size = Vector2(480, 150)
layout_mode = 0
offset_left = 400.0
offset_top = 150.0
offset_right = 440.0
offset_bottom = 190.0
theme = ExtResource("3_ohvov")
theme_type_variation = &"SmallPopupPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/small_popup"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="icon_control" type="Control" parent="Popups/small_popup/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
size_flags_horizontal = 0

[node name="icon_sprite" type="Sprite2D" parent="Popups/small_popup/HBoxContainer/icon_control"]
unique_name_in_owner = true
texture = ExtResource("13_vydkj")
centered = false

[node name="spacer" type="Control" parent="Popups/small_popup/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="Popups/small_popup/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="Popups/small_popup/HBoxContainer/vbox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="small_popup_text" type="RichTextLabel" parent="Popups/small_popup/HBoxContainer/vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"SmallPopupRLabel"
bbcode_enabled = true
text = "Text goes here"
scroll_active = false

[node name="spacer2" type="Control" parent="Popups/small_popup/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="large_popup" type="Control" parent="Popups"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="large_popup_panel" type="PanelContainer" parent="Popups/large_popup"]
custom_minimum_size = Vector2(480, 300)
layout_mode = 0
offset_left = 400.0
offset_top = 150.0
offset_right = 880.0
offset_bottom = 450.0
theme = ExtResource("3_ohvov")
theme_type_variation = &"LargePopupPanel"

[node name="vbox" type="VBoxContainer" parent="Popups/large_popup/large_popup_panel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="top_hbox" type="HBoxContainer" parent="Popups/large_popup/large_popup_panel/vbox"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_constants/separation = 0

[node name="icon_container_large" type="Control" parent="Popups/large_popup/large_popup_panel/vbox/top_hbox"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="large_icon" type="Sprite2D" parent="Popups/large_popup/large_popup_panel/vbox/top_hbox/icon_container_large"]
unique_name_in_owner = true
texture = ExtResource("14_8eegs")
centered = false

[node name="spacer_l_popup" type="Control" parent="Popups/large_popup/large_popup_panel/vbox/top_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="large_title" type="RichTextLabel" parent="Popups/large_popup/large_popup_panel/vbox/top_hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"LargePopupTitle"
bbcode_enabled = true
text = "title goes here"
scroll_active = false

[node name="large_text" type="RichTextLabel" parent="Popups/large_popup/large_popup_panel/vbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"LargePopupText"
bbcode_enabled = true
text = "a lot of text goes here"
scroll_active = false

[node name="buttons" type="HBoxContainer" parent="Popups/large_popup/large_popup_panel/vbox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_constants/separation = 0

[node name="timer_label" type="Label" parent="Popups/large_popup/large_popup_panel/vbox/buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("3_ohvov")
theme_type_variation = &"LargePopupTimerLabel"
text = "000"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="timer_spacer" type="Control" parent="Popups/large_popup/large_popup_panel/vbox/buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 35)
layout_mode = 2

[node name="cancel_btn" type="Button" parent="Popups/large_popup/large_popup_panel/vbox/buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"LargePopupButton"
text = "cancel"

[node name="spacer3" type="Control" parent="Popups/large_popup/large_popup_panel/vbox/buttons"]
custom_minimum_size = Vector2(10, 35)
layout_mode = 2

[node name="confirm_btn" type="Button" parent="Popups/large_popup/large_popup_panel/vbox/buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ohvov")
theme_type_variation = &"LargePopupButton"
text = "confirm"
